--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>COMP125 Lesson 2</title>
+    <title>Projects</title>
     <!-- CSS Section-->
     <link rel="stylesheet" href="Content/css/bootstrap.min.css">
     <link rel="stylesheet" href="Content/css/bootstrap-theme.min.css">
@@ -30,11 +30,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="index.html">
+                    <li><a href="index.html">
                         <i class="fa fa-home fa-lg" aria-hidden="true"></i>Home</a>
                     </i>
                     </li>
-                    <li><a href="projects.html">Projects</a></li>
+                    <li class="active"><a href="projects.html">Projects</a></li>
                     <li><a href="about.html">About Me</a></li>
                 </ul>
             </div>
@@ -46,11 +46,10 @@
     <div class="container">
         <div class="row">
 
-            <h1>Lesson 3 - Arrays and Control Flow</h1>
+            <h1>Projects</h1>
 
-            <p id="paragraphOne">
-
-            </p>
+            <p id="paragraphTwo"></p>
+            
         </div>
     </div>
 
